[package]
name = "ttr-launcher-oxide"
version = "0.1.0"
authors = ["CerulanLumina <CerulanLumina@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "0.9.0"
serde_json = "1.0.56"
structopt = "0.3.15"
dirs = "3.0.1"
async-std = "1.6.2"
rand = "0.7.3"
sha = "1.0.3"
rpassword = "4.0.5"
rprompt = "1.0.5"

[dependencies.bzip2]
version = "0.4.1"
features = ["tokio"]

[dependencies.tokio]
version = "0.2.21"
features = ["full"]

[dependencies.futures]
version = "0.3.5"
features = ["thread-pool"]

[dependencies.reqwest]
version = "0.10.6"
features = ["json"]

[dependencies.serde]
version = "1.0.114"
features = ["derive"]